# REU-Smart-Cities

./: .gitignore  README.md  setup_ros_lidar_env.sh
docker/: Dockerfile.base_image  Dockerfile.orbit_base  Dockerfile.rsu  docker-compose.yaml
v2v_sdr_project/ros_node_logic/: package.xml
v2v_sdr_project/ros_node_logic/db/: orbitdb.js
v2v_sdr_project/ros_node_logic/launch/: fusion.launch
v2v_sdr_project/ros_node_logic/memory/: cav_memory_adapter.py  memory_manager.py  rsu_memory_adapter.py
v2v_sdr_project/ros_node_logic/msg/: DsrcDetection.msg
v2v_sdr_project/ros_node_logic/ros_node_logic/launch/: sdr_fusion.launch
v2v_sdr_project/ros_node_logic/ros_node_logic/src/: sdr_fusion_node.py
v2v_sdr_project/ros_node_logic/src/: fuse_pointclouds.py  lidar_fusion_node.py  sdr_fusion_node.py  sdr_receiver_node.py
v2v_sdr_project/ros_node_logic/src/cav_logic/: main.py
v2v_sdr_project/ros_node_logic/src/fusion/: fused_callback.py  fusion_callback.py  sphere_lidar_publisher.py
v2v_sdr_project/ros_node_logic/src/memory/: cav_memory_adapter.py  rsu_memory_adapter.py
v2v_sdr_project/ros_node_logic/src/networking/: peer_config.py
v2v_sdr_project/ros_node_logic/src/networking/memory/: memory_manager.py
v2v_sdr_project/ros_node_logic/src/networking/storage/: cav_ipfs_node.py  ipfs_sync.py
v2v_sdr_project/ros_node_logic/src/rsu_logic/: main.py
v2v_sdr_project/ros_node_logic/src/storage/: ipfs_store.py
v2v_sdr_project/ros_node_logic/src/test/: mock_sdr_lidar_publisher.py
v2v_sdr_project/ros_node_logic/src/test/ros_node_logic/: test_sdr_fusion_node.py
(+84 files in other folders)
