<?xml version="1.0"?>
<package format="2">
  <name>lidar_fusion_package</name>
  <version>0.1.0</version>
  <description>Fusion of SDR and LiDAR data</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>message_runtime</depend>

  <export>
  </export>
</package>
